# VideoRecBack-Docker

./: .dockerignore  .gitignore  Dockerfile  README.md  design-qa.md  pyproject.toml  requirements.txt
app/: config.py  db.py  formatting.py  main.py  media.py  scanner.py  thumbnails.py  video_types.py
app/static/: app.js  intranet.js  player.js  settings.js  styles.css
app/templates/: _timeline_batch.html  _video_macros.html  base.html  detail.html  index.html  play.html  settings.html
tests/: test_background_maintenance.py  test_config.py  test_db_migrations.py  test_formatting.py  test_media.py  test_scanner_detection.py  test_scanner_metadata.py  test_settings_hours.py  test_thumbnails.py  test_video_types.py  test_views.py
