[project]
name = "videorecback"
version = "2.5.1"
description = "A clean NAS video archive browser with cached previews."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "pydantic==2.13.4",
    "anyio==4.13.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
    "Pillow==11.3.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
